tests/expected_invalid_with_non_grant.diag.out
<input>:6:5: error: 'grant' requires a function annotated with 'grants'
        grant open() as pass {
        ^^^^^^^^^^^^^^^^^^^^^^
